proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/expr_dict.py
z = {'a':1, 2:'hi', True:False}
print z['a']
print z[2]
print z[True]
