proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/additional_type_trivial_2.py
# Test a syntactically wrong example of using static typing.
dict of [str, int] x = {"hi": 1}
